--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="19254-101">工作表中的所有 chart 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="19254-101">A collection of all the chart objects on a worksheet.</span></span>
+      工作表中的所有 chart 对象的集合。
 
-      <span data-ttu-id="19254-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartCollectionLoadOptions
     fullName: Excel.Interfaces.ChartCollectionLoadOptions
     langs:
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member'
       - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="19254-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="19254-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="19254-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="19254-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="19254-105">).</span><span class="sxs-lookup"><span data-stu-id="19254-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -39,9 +39,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#axes:member'
     summary: |-
-      <span data-ttu-id="19254-106">对于集合中的每一项：表示图表坐标轴。</span><span class="sxs-lookup"><span data-stu-id="19254-106">For EACH ITEM in the collection: Represents chart axes.</span></span>
+      对于集合中的每一项：表示图表坐标轴。
 
-      <span data-ttu-id="19254-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
     fullName: axes
     langs:
@@ -54,9 +54,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#dataLabels:member'
     summary: |-
-      <span data-ttu-id="19254-108">对于集合中的每一项：代表图表上的 datalabels。</span><span class="sxs-lookup"><span data-stu-id="19254-108">For EACH ITEM in the collection: Represents the datalabels on the chart.</span></span>
+      对于集合中的每一项：代表图表上的 datalabels。
 
-      <span data-ttu-id="19254-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -69,9 +69,9 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="19254-110">对于集合中的每一项：封装图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="19254-110">For EACH ITEM in the collection: Encapsulates the format properties for the chart area.</span></span>
+      对于集合中的每一项：封装图表区域的格式属性。
 
-      <span data-ttu-id="19254-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -84,9 +84,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="19254-112">对于集合中的每一项：代表图表对象的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="19254-112">For EACH ITEM in the collection: Represents the height, in points, of the chart object.</span></span>
+      对于集合中的每一项：指定 chart 对象的高度（以磅为单位）。
 
-      <span data-ttu-id="19254-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -99,9 +99,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="19254-114">对于集合中的每一项：从图表左侧到工作表原点的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="19254-114">For EACH ITEM in the collection: The distance, in points, from the left side of the chart to the worksheet origin.</span></span>
+      对于集合中的每一项：从图表左侧到工作表原点的距离（以磅为单位）。
 
-      <span data-ttu-id="19254-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -114,9 +114,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#legend:member'
     summary: |-
-      <span data-ttu-id="19254-116">对于集合中的每一项：代表图表的图例。</span><span class="sxs-lookup"><span data-stu-id="19254-116">For EACH ITEM in the collection: Represents the legend for the chart.</span></span>
+      对于集合中的每一项：代表图表的图例。
 
-      <span data-ttu-id="19254-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
     fullName: legend
     langs:
@@ -129,9 +129,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="19254-118">对于集合中的每一项：代表 chart 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="19254-118">For EACH ITEM in the collection: Represents the name of a chart object.</span></span>
+      对于集合中的每一项：指定 chart 对象的名称。
 
-      <span data-ttu-id="19254-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -144,9 +144,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#series:member'
     summary: |-
-      <span data-ttu-id="19254-120">对于集合中的每一项：代表图表中的单个系列或系列集合。</span><span class="sxs-lookup"><span data-stu-id="19254-120">For EACH ITEM in the collection: Represents either a single series or collection of series in the chart.</span></span>
+      对于集合中的每一项：代表图表中的单个系列或系列集合。
 
-      <span data-ttu-id="19254-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: series
     fullName: series
     langs:
@@ -159,9 +159,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#title:member'
     summary: |-
-      <span data-ttu-id="19254-122">对于集合中的每一项：代表指定图表的标题，包括标题的文本、可见性、位置和格式。</span><span class="sxs-lookup"><span data-stu-id="19254-122">For EACH ITEM in the collection: Represents the title of the specified chart, including the text, visibility, position, and formatting of the title.</span></span>
+      对于集合中的每一项：指定指定图表的标题，包括标题的文本、可见性、位置和格式。
 
-      <span data-ttu-id="19254-123">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -174,9 +174,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="19254-124">对于集合中的每一项：代表从对象的上边缘到工作表第1行顶部的距离，或图表上的图表区顶部的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="19254-124">For EACH ITEM in the collection: Represents the distance, in points, from the top edge of the object to the top of row 1 (on a worksheet) or the top of the chart area (on a chart).</span></span>
+      对于集合中的每一项：指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
-      <span data-ttu-id="19254-125">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-125">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -189,9 +189,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="19254-126">对于集合中的每一项：代表 chart 对象的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="19254-126">For EACH ITEM in the collection: Represents the width, in points, of the chart object.</span></span>
+      对于集合中的每一项：指定 chart 对象的宽度（以磅为单位）。
 
-      <span data-ttu-id="19254-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -204,9 +204,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="19254-128">对于集合中的每一项：包含当前图表的工作表。</span><span class="sxs-lookup"><span data-stu-id="19254-128">For EACH ITEM in the collection: The worksheet containing the current chart.</span></span>
+      对于集合中的每一项：包含当前图表的工作表。
 
-      <span data-ttu-id="19254-129">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19254-129">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
