--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartfontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartfontupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData:interface'
-    summary: '<span data-ttu-id="a075d-101">一个用于更新 ChartFont 对象上的数据的接口，可用于`chartFont.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="a075d-101">An interface for updating data on the ChartFont object, for use in `chartFont.set({ ... })`</span></span><!-- --><span data-ttu-id="a075d-102">.</span><span class="sxs-lookup"><span data-stu-id="a075d-102"></span></span>'
+    summary: '一个用于更新 ChartFont 对象上的数据的接口，可用于`chartFont.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartFontUpdateData
     fullName: Excel.Interfaces.ChartFontUpdateData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.ChartFontUpdateData#underline:member'
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData#bold:member'
     summary: |-
-      <span data-ttu-id="a075d-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="a075d-103">Represents the bold status of font.</span></span>
+      表示字体的加粗状态。
 
-      <span data-ttu-id="a075d-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a075d-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="a075d-105">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="a075d-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="a075d-106">例如，</span><span class="sxs-lookup"><span data-stu-id="a075d-106">E.g.</span></span> <span data-ttu-id="a075d-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="a075d-107">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="a075d-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a075d-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData#italic:member'
     summary: |-
-      <span data-ttu-id="a075d-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="a075d-109">Represents the italic status of the font.</span></span>
+      表示字体的斜体状态。
 
-      <span data-ttu-id="a075d-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a075d-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="a075d-111">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="a075d-111">Font name (e.g. "Calibri")</span></span>
+      字体名称（例如，"Calibri"）
 
-      <span data-ttu-id="a075d-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a075d-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData#size:member'
     summary: |-
-      <span data-ttu-id="a075d-113">字号（例如，11）</span><span class="sxs-lookup"><span data-stu-id="a075d-113">Size of the font (e.g. 11)</span></span>
+      字体大小（例如，11）
 
-      <span data-ttu-id="a075d-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a075d-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -92,9 +92,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData#underline:member'
     summary: |-
-      <span data-ttu-id="a075d-115">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="a075d-115">Type of underline applied to the font.</span></span> <span data-ttu-id="a075d-116">有关详细信息，请参阅 ChartUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="a075d-116">See Excel.ChartUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 ChartUnderlineStyle。
 
-      <span data-ttu-id="a075d-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a075d-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
