--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangefontloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangefontloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="37943-101">此对象表示对象的字体属性（字体样式、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="37943-101">This object represents the font attributes (font style, color, etc.) for an object.</span></span>
+      此对象表示对象的字体属性（字体样式、颜色等）。
 
-      <span data-ttu-id="37943-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="37943-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ConditionalRangeFontLoadOptions
     fullName: Excel.Interfaces.ConditionalRangeFontLoadOptions
     langs:
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#strikethrough:member'
       - 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#underline:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#$all:member'
-    summary: '<span data-ttu-id="37943-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="37943-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="37943-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="37943-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="37943-105">).</span><span class="sxs-lookup"><span data-stu-id="37943-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#bold:member'
     summary: |-
-      <span data-ttu-id="37943-106">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="37943-106">Represents the bold status of font.</span></span>
+      指定字体是否为粗体。
 
-      <span data-ttu-id="37943-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="37943-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="37943-108">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="37943-108">HTML color code representation of the text color.</span></span> <span data-ttu-id="37943-109">例如，</span><span class="sxs-lookup"><span data-stu-id="37943-109">E.g.</span></span> <span data-ttu-id="37943-110">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="37943-110">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="37943-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="37943-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#italic:member'
     summary: |-
-      <span data-ttu-id="37943-112">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="37943-112">Represents the italic status of the font.</span></span>
+      指定字体是否为斜体。
 
-      <span data-ttu-id="37943-113">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="37943-113">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#strikethrough:member'
     summary: |-
-      <span data-ttu-id="37943-114">表示字体的删除线状态。</span><span class="sxs-lookup"><span data-stu-id="37943-114">Represents the strikethrough status of the font.</span></span>
+      指定字体的删除线状态。
 
-      <span data-ttu-id="37943-115">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="37943-115">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontLoadOptions#underline:member'
     summary: |-
-      <span data-ttu-id="37943-116">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="37943-116">Type of underline applied to the font.</span></span> <span data-ttu-id="37943-117">有关详细信息，请参阅 ConditionalRangeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="37943-117">See Excel.ConditionalRangeFontUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 ConditionalRangeFontUnderlineStyle。
 
-      <span data-ttu-id="37943-118">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="37943-118">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
