--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.tablerowdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.tablerowdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableRowData:interface'
-    summary: <span data-ttu-id="4d1c2-101">描述通过调用返回的数据的接口`tableRow.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4d1c2-101">An interface describing the data returned by calling `tableRow.toJSON()`</span></span><!-- --><span data-ttu-id="4d1c2-102">.</span><span class="sxs-lookup"><span data-stu-id="4d1c2-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`tableRow.toJSON()`<!-- -->.
     name: Excel.Interfaces.TableRowData
     fullName: Excel.Interfaces.TableRowData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.TableRowData#values:member'
   - uid: 'excel!Excel.Interfaces.TableRowData#index:member'
     summary: |-
-      <span data-ttu-id="4d1c2-103">返回表的行集合内行的索引编号。</span><span class="sxs-lookup"><span data-stu-id="4d1c2-103">Returns the index number of the row within the rows collection of the table.</span></span> <span data-ttu-id="4d1c2-104">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="4d1c2-104">Zero-indexed.</span></span> <span data-ttu-id="4d1c2-105">只读。</span><span class="sxs-lookup"><span data-stu-id="4d1c2-105">Read-only.</span></span>
+      返回表的行集合内行的索引编号。 从零开始编制索引。
 
-      <span data-ttu-id="4d1c2-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4d1c2-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -28,9 +28,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.TableRowData#values:member'
     summary: |-
-      <span data-ttu-id="4d1c2-107">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="4d1c2-107">Represents the raw values of the specified range.</span></span> <span data-ttu-id="4d1c2-108">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="4d1c2-108">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="4d1c2-109">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="4d1c2-109">Cells that contain an error will return the error string.</span></span>
+      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="4d1c2-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4d1c2-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
