--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangebordercollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangebordercollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeBorderCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="034d3-101">一个用于更新 RangeBorderCollection 对象上的数据的接口，可用于`rangeBorderCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="034d3-101">An interface for updating data on the RangeBorderCollection object, for use in `rangeBorderCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="034d3-102">.</span><span class="sxs-lookup"><span data-stu-id="034d3-102"></span></span>'
+    summary: '一个用于更新 RangeBorderCollection 对象上的数据的接口，可用于`rangeBorderCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeBorderCollectionUpdateData
     fullName: Excel.Interfaces.RangeBorderCollectionUpdateData
     langs:
@@ -24,9 +24,9 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderCollectionUpdateData#items~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeBorderCollectionUpdateData#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="034d3-103">返回或设置一个使区域边框的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="034d3-103">Returns or sets a double that lightens or darkens a color for Range Borders, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="034d3-104">空值表示整个边框集合没有统一的 tintAndShade 设置。</span><span class="sxs-lookup"><span data-stu-id="034d3-104">A null value indicates that the entire border collections don't have uniform tintAndShade setting.</span></span>
+      指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示整个边框集合没有统一的 tintAndShade 设置。
 
-      <span data-ttu-id="034d3-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="034d3-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
